# whisper-ptt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bundle/: Info.plist
docs/superpowers/plans/: 2026-03-13-whisper-push-to-talk.md
docs/superpowers/specs/: 2026-03-13-whisper-push-to-talk-design.md
scripts/: bundle.sh
src/: clipboard.rs  config.rs  hid_listener.rs  history.rs  hotkey.rs  main.rs  transcriber.rs
src/audio/: capture.rs  feedback.rs  mod.rs  mute.rs
