[package]
name = "whisper-ptt"
version = "0.1.0"
edition = "2021"
description = "Lightweight push-to-talk speech recognition using Whisper"
license = "MIT"
repository = "https://github.com/Bluezen/whisper-ptt"

[dependencies]
# Whisper bindings
whisper-rs = "0.16"

# Audio
cpal = "0.15"
rodio = "0.20"
rubato = "0.16"

# Keyboard
rdev = "0.5"

# Clipboard
arboard = "3"

# macOS audio muting
coreaudio-sys = "0.2"

# macOS IOHIDManager (fn key capture)
core-foundation-sys = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Networking (model download)
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"

# Utilities
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ctrlc = "3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
